--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fast-xml-parser": "^3.16.0",
     "fs-extra": "^8.1.0",
     "image-size": "^0.8.3",
+    "uuidv4": "^6.0.2",
     "xmlbuilder": "^13.0.2"
   },
   "devDependencies": {
