--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.ibm.com/valerio-riva/object-detection-training-converter.git"
+    "url": "https://github.com/Lotti/obj-annotations-converter"
   },
   "author": "Valerio Riva <valerio.riva@it.ibm.com>",
   "license": "MIT",
@@ -15,17 +15,20 @@
     "obj-annotations-converter": "./cli/converter.js"
   },
   "dependencies": {
-    "chalk": "^3.0.0",
-    "commander": "^4.1.0",
+    "chalk": "^4.1.0",
+    "commander": "^6.2.0",
+    "dayjs": "^1.9.6",
     "dotenv": "^8.2.0",
-    "fast-glob": "^3.1.1",
-    "fast-xml-parser": "^3.16.0",
-    "fs-extra": "^8.1.0",
-    "image-size": "^0.8.3",
-    "uuidv4": "^6.0.2",
-    "xmlbuilder": "^13.0.2"
+    "fast-glob": "^3.2.4",
+    "fast-xml-parser": "^3.17.4",
+    "fs-extra": "^9.0.1",
+    "html-entities": "^1.3.1",
+    "iconv": "^3.0.0",
+    "image-size": "^0.9.3",
+    "uuid": "^8.3.1",
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^7.14.0"
   }
 }
