--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-entities": "^1.3.1",
     "iconv": "^3.0.0",
     "image-size": "^0.9.3",
+    "normalize-path": "^3.0.0",
     "uuid": "^8.3.2",
     "xmlbuilder": "^15.1.1"
   },
